fix: Fix scroll items overflow (todos), Products sort feature, Add login cold start info

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -954,6 +954,10 @@ a.active,
 	flex: 1;
 }
 
+.flex-shrink-0 {
+	flex-shrink: 0;
+}
+
 .align-center {
 	align-items: center;
 }
@@ -1230,6 +1234,10 @@ tbody tr.border-bottom:last-child {
 	overflow-x: auto;
 	white-space: nowrap;
 	width: auto;
+}
+
+.scroll-item {
+	flex: 0 0 auto;
 }
 
 @media (max-width: 576px) {
