--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -132,8 +132,9 @@
 }
 
 .btn--text {
-	background-color: transparent;
+	min-height: 16px;
 	padding: 0;
+	background-color: transparent;
 	font-size: inherit;
 }
 
